--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>CAKU Bus Finder</title>
+  <title>V2X CAKU Bus Finder</title>
   <style>
     :root {
       --bg: #0b1020;
