Update product name to 'V2X CAKU Bus Finder'

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ footer {
         />
       </div>
       <div class="v2x-product-copy">
-        <div class="v2x-product-name">CAKU Bus Finder</div>
+        <div class="v2x-product-name">V2X CAKU Bus Finder</div>
         <div class="v2x-product-subtitle">Mission connected. Mission committed.</div>
       </div>
     </div>
